[package]
name = "frinx"
version = "0.1.0"
edition = "2024"

[dependencies]
aez = "0.0.7"
bincode = { version = "2.0.1", features = ["serde"] }
curve25519-dalek = { version = "4.1.3", features = ["rand_core", "serde", "digest"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
sha3 = "0.10.8"
thiserror = "2.0.12"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "frinx"
harness = false
