[package]
name = "scylla"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
curve25519-dalek = { version = "4.1.3", features = ["rand_core", "serde", "digest"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
sha3 = "0.10.8"
thiserror = "2.0.12"

# Use the same primitives as Nym's sphinx:
lioness = "0.1.2"
chacha = "0.3.0"
blake2 = "0.8.0" # cannot be updated due to outdated dependency inside lioness
hkdf = "0.12.4"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
criterion-cputime = { path = "../criterion-cputime" }

[[bench]]
name = "scylla"
harness = false
